src/components/LoadingModal/LoadingModal.css
.loading-modal {
  position: fixed;
  z-index: 99999999;
  width: 100vw;
  height: 100vh;
  background-color: var(--color-bg);
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
}

.loading-logo {
  display: flex;
  font-size: 3rem;
  font-weight: bold;
}

.loading-logo .text-accent {
  font-size: 5rem;
}

.hide-modal {
  animation-name: hide-modal;
  animation-duration: 1s;
  animation-iteration-count: 1;
  animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
}

.bounce {
  display: flex;
  align-self: flex-end;
  margin-bottom: 1.30rem;
  margin-left: -5px;
  margin-right: -5px;
  transform-origin: bottom;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-name: bounce;
  animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
}

@keyframes bounce {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-1.8rem);
  }
  100% {
    transform: translateY(0);
  }
}

@keyframes hide-modal {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

